Library/Info pages margin issues on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -207,10 +207,6 @@
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.library main .section {
-    padding-left: 0px;
-}
-
 .library main .section .call-to-action-wrapper h2 {
     margin: 0px;
     padding: 0px;
